--- a/pom.xml
+++ b/pom.xml
@@ -8,16 +8,16 @@
     <artifactId>gafalag-api</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <description>Gafalag - словарь</description>
+    <description>Gafalag - микросервис словаря</description>
 
     <properties>
-        <java.version>16</java.version>
+        <java.version>14</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <spring.boot.version>2.1.18.RELEASE</spring.boot.version>
-        <spring.maven.artifact.version>5.2.4.RELEASE</spring.maven.artifact.version>
-        <spring.data.jpa.version>2.6.0</spring.data.jpa.version>
+        <spring.boot.version>2.3.12.RELEASE</spring.boot.version>
+        <spring.maven.artifact.version>5.2.18.RELEASE</spring.maven.artifact.version>
+        <spring.data.jpa.version>2.3.9.RELEASE</spring.data.jpa.version>
         <spring-boot-starter-jdbc.version>2.4.2</spring-boot-starter-jdbc.version>
 
         <postgresql.version>42.2.18</postgresql.version>
@@ -27,7 +27,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.1.RELEASE</version>
+        <version>2.3.12.RELEASE</version>
         <relativePath/>
     </parent>
 
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring.boot.version}</version>
+            <version>2.3.12.RELEASE</version>
         </dependency>
 
         <dependency>
@@ -66,6 +66,7 @@
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
+            <version>${spring.boot.version}</version>
         </dependency>
 
         <dependency>
@@ -84,6 +85,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.6.1.Final</version>
         </dependency>
 
         <dependency>
@@ -204,7 +206,7 @@
 
         <repository>
             <id>codehaus</id>
-            <url>http://repository.codehaus.org/org/codehaus</url>
+            <url>https://repository.codehaus.org/org/codehaus</url>
         </repository>
     </repositories>
     <pluginRepositories>
