added docker support for whole project, updated readme, added property profiles, removed unnecessary and updated maven packages

--- a/docker/db/Dockerfile
+++ b/docker/db/Dockerfile
@@ -2,4 +2,4 @@ FROM postgres
 ENV POSTGRES_USER docker
 ENV POSTGRES_PASSWORD docker
 ENV POSTGRES_DB gafalag_db
-COPY sqlscripts/create.sql /docker-entrypoint-initdb.d/
+COPY ../../sqlscripts/create.sql /docker-entrypoint-initdb.d/
