--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,33 @@
 
     <description>Gafalag - микросервис словаря</description>
 
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <build.profile.id>dev</build.profile.id>
+                <profileActive>dev</profileActive>
+            </properties>
+        </profile>
+        <profile>
+            <id>docker</id>
+            <properties>
+                <build.profile.id>docker</build.profile.id>
+                <profileActive>docker</profileActive>
+            </properties>
+        </profile>
+    </profiles>
+
     <properties>
-        <java.version>14</java.version>
+        <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <spring.boot.version>2.3.12.RELEASE</spring.boot.version>
-        <spring.maven.artifact.version>5.2.18.RELEASE</spring.maven.artifact.version>
+        <spring.boot.version>2.6.1</spring.boot.version>
+        <spring.maven.artifact.version>5.3.14</spring.maven.artifact.version>
         <spring.data.jpa.version>2.3.9.RELEASE</spring.data.jpa.version>
         <spring-boot-starter-jdbc.version>2.4.2</spring-boot-starter-jdbc.version>
 
@@ -27,7 +47,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.12.RELEASE</version>
+        <version>2.6.1</version>
         <relativePath/>
     </parent>
 
@@ -42,13 +62,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>2.3.12.RELEASE</version>
+            <version>${spring.boot.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
-            <version>${spring-boot-starter-jdbc.version}</version>
+            <version>${spring.boot.version}</version>
         </dependency>
 
         <dependency>
@@ -64,15 +84,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.kafka</groupId>
-            <artifactId>spring-kafka</artifactId>
-            <version>${spring.boot.version}</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
-            <version>${spring.data.jpa.version}</version>
         </dependency>
 
         <dependency>
@@ -116,13 +129,13 @@
         <dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
-            <version>1.6.0</version>
+            <version>1.6.3</version>
         </dependency>
 
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
-            <version>1.4.3</version>
+            <version>1.6.1</version>
         </dependency>
 
         <dependency>
@@ -136,24 +149,6 @@
             <artifactId>mockito-junit-jupiter</artifactId>
             <version>3.7.7</version>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>net.logstash.logback</groupId>
-            <artifactId>logstash-logback-encoder</artifactId>
-            <version>4.9</version>
-        </dependency>
-
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-            <version>1.2.3</version>
-        </dependency>
-
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
         </dependency>
 
         <dependency>
@@ -177,7 +172,7 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-                    <encoding>${project.build.sourceEncoding</encoding>
+                    <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
 
