--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,44 @@
 spring.profiles.active=@profileActive@
+
+server.port=8080
+# datasource connection
+
+spring.datasource.username=docker
+spring.datasource.password=docker
+# jpa hibernate
+spring.jpa.database=POSTGRESQL
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.open-in-view=false
+# out console
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+# date time format
+spring.mvc.format.date-time=dd-MM-yyyy HH:mm:ss
+spring.mvc.format.date=dd.MM.yyyy
+spring.mvc.format.time=HH:mm:ss
+# mapping
+spring.data.rest.enable-enum-translation=true
+spring.mvc.converters.preferred-json-mapper=jackson
+spring.jackson.default-property-inclusion=non_null
+spring.jackson.mapper.sort-creator-properties-first=true
+spring.jackson.serialization.indent-output=true
+spring.jackson.date-format=com.fasterxml.jackson.databind.util.StdDateFormat
+spring.jackson.deserialization.read-unknown-enum-values-using-default-value=true
+spring.jackson.serialization.write-enums-using-to-string=true
+# rest properties
+spring.data.jpa.repositories.enabled=true
+spring.data.rest.return-body-on-update=true
+spring.data.rest.return-body-on-create=true
+# documentation
+springdoc.swagger-ui.path=/
+# logging
+spring.main.banner-mode=off
+logging.level.root=INFO
+logging.level.org.springframework=WARN
+logging.level.org.hibernate=WARN
+
