--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,7 @@ spring.data.jpa.repositories.enabled=true
 spring.data.rest.return-body-on-update=true
 spring.data.rest.return-body-on-create=true
 # documentation
+springdoc.swagger-ui.url=/v3/api-docs
 springdoc.swagger-ui.path=/
 # logging
 spring.main.banner-mode=off
