--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,2 +1,5 @@
 # datasource connection
 spring.datasource.url=jdbc:postgresql://localhost:5432/gafalag_db
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
