[GAF-10] fixed object mapper

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.profiles.active=@profileActive@
-
 server.port=8080
 # datasource connection
-
 spring.datasource.username=docker
 spring.datasource.password=docker
 # jpa hibernate
@@ -34,6 +32,10 @@ spring.jackson.serialization.write-enums-using-to-string=true
 spring.data.jpa.repositories.enabled=true
 spring.data.rest.return-body-on-update=true
 spring.data.rest.return-body-on-create=true
+# upload file
+spring.servlet.multipart.max-file-size=30MB
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.enabled=true
 # documentation
 springdoc.swagger-ui.url=/v3/api-docs
 springdoc.swagger-ui.path=/
