fixed performance batch insert, fixed post language bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,8 @@ spring.data.rest.return-body-on-create=true
 spring.servlet.multipart.max-file-size=30MB
 spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.enabled=true
+spring.jpa.properties.hibernate.jdbc.batch_size=100
+spring.jpa.properties.hibernate.order_inserts = true
 # documentation
 springdoc.swagger-ui.url=/v3/api-docs
 springdoc.swagger-ui.path=/
