--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,11 @@ spring.datasource.password=docker
 # jpa hibernate
 spring.jpa.database=POSTGRESQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+spring.jpa.properties.hibernate.jdbc.batch_size=100
+spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.open-in-view=false
@@ -36,8 +38,6 @@ spring.data.rest.return-body-on-create=true
 spring.servlet.multipart.max-file-size=30MB
 spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.enabled=true
-spring.jpa.properties.hibernate.jdbc.batch_size=100
-spring.jpa.properties.hibernate.order_inserts = true
 # documentation
 springdoc.swagger-ui.url=/v3/api-docs
 springdoc.swagger-ui.path=/
