[GAF-12] deleted redundant properties

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,2 +1,5 @@
 # datasource connection
 spring.datasource.url=jdbc:postgresql://host.docker.internal:5433/gafalag_db
+# console out
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
