--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,17 +4,43 @@ server.port=8080
 spring.datasource.username=docker
 spring.datasource.password=docker
 # jpa hibernate
+spring.jpa.database=POSTGRESQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 spring.jpa.properties.hibernate.jdbc.batch_size=100
 spring.jpa.properties.hibernate.order_inserts=true
+# out console
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+# date time format
+spring.mvc.format.date-time=dd-MM-yyyy HH:mm:ss
+spring.mvc.format.date=dd.MM.yyyy
+spring.mvc.format.time=HH:mm:ss
 # mapping
+spring.data.rest.enable-enum-translation=true
+spring.mvc.converters.preferred-json-mapper=jackson
 spring.jackson.default-property-inclusion=non_null
+spring.jackson.mapper.sort-creator-properties-first=true
+spring.jackson.serialization.indent-output=true
+spring.jackson.date-format=com.fasterxml.jackson.databind.util.StdDateFormat
+spring.jackson.deserialization.read-unknown-enum-values-using-default-value=true
+spring.jackson.serialization.write-enums-using-to-string=true
+# rest properties
+spring.data.jpa.repositories.enabled=true
+spring.data.rest.return-body-on-update=true
+spring.data.rest.return-body-on-create=true
 # upload file
 spring.servlet.multipart.max-file-size=30MB
 spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.enabled=true
 # documentation
+springdoc.swagger-ui.url=/v3/api-docs
 springdoc.swagger-ui.path=/
 # logging
 spring.main.banner-mode=off
+logging.level.root=INFO
+logging.level.org.springframework=WARN
+logging.level.org.hibernate=WARN
 
