--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.batch_size=100
 spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.open-in-view=false
 # out console
 spring.jpa.properties.hibernate.format_sql=true
 # date time format
