--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: Deploy to Staging
 
 on:
   push:
-    branches: [ main ]
+    branches: [develop]
   pull_request:
-    branches: [ main ]
+    branches: [develop]
   # Allows to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -19,7 +19,7 @@ jobs:
     - name: Install doctl for DigitalOcean
       uses: digitalocean/action-doctl@v2.1.0
       with:
-        token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+        token: ${{secrets.DIGITALOCEAN_ACCESS_TOKEN}}
         
     - name: Set up Docker Builder
       uses: docker/setup-buildx-action@v1
@@ -35,8 +35,8 @@ jobs:
         # REPLACE "cr-bp-web-backend" with your own container registry 
         # REPLACE name "bp-web-backend" with a suitable name for your app image
         tags: |
-          registry.digitalocean.com/gafalag:latest
-          registry.digitalocean.com/gafalag:sha-${{ github.sha }}
+          registry.digitalocean.com/gafalag/gafalag-backend:latest
+          registry.digitalocean.com/gafalag/gafalag-backend:sha-${{github.sha}}
       
   deploy:
     needs: build
@@ -48,18 +48,18 @@ jobs:
 
       # Droplets already have docker, doctl + auth, and curl installed
       # REPLACE "bp-web-backend" with image name used in build job
-      - name: Deploy gafalag to DigitalOcean Droplet
+      - name: Deploy gafalag-backend to DigitalOcean Droplet
         uses: appleboy/ssh-action@v0.1.4
         with:
-          host: ${{ secrets.DIGITALOCEAN_DROPLET_HOST }}
+          host: ${{secrets.DIGITALOCEAN_DROPLET_HOST}}
           username: root
-          key: ${{ secrets.DIGITALOCEAN_API_KEY }}
+          key: ${{secrets.DIGITALOCEAN_API_KEY}}
           port: 22
           # REPLACE "bp-web-backend" with image name used in build job
           # REPLACE "cr-bp-web-backend" with your own container registry
           script: |
             doctl registry login --expiry-seconds 180
-            docker pull registry.digitalocean.com/gafalag/gafalag:latest
+            docker pull registry.digitalocean.com/gafalag/gafalag-backend:latest
             echo "calling shutdown endpoint..."
             curl --silent http://localhost/shutdown || true
             echo "giving healthcheck time to fail..."
@@ -68,11 +68,11 @@ jobs:
             echo "removing unused images..."
             docker image prune -a
             echo "stopping and removing running container..."
-            docker stop gafalag || true
-            docker rm gafalag || true
+            docker stop gafalag-backend || true
+            docker rm gafalag-backend || true
             echo "starting server instance..."
             docker run -d \
               --restart always \
               -p 0.0.0.0:80:8080 \
               --name bp-web-backend \
-              registry.digitalocean.com/gafalag/gafalag:latest
+              registry.digitalocean.com/gafalag/gafalag-backend:latest
