--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,8 @@ jobs:
         # REPLACE "cr-bp-web-backend" with your own container registry 
         # REPLACE name "bp-web-backend" with a suitable name for your app image
         tags: |
-          registry.digitalocean.com/gafalag/default-ams3:latest
-          registry.digitalocean.com/gafalag/default-ams3:sha-${{ github.sha }}
+          registry.digitalocean.com/gafalag/gafalag-api:latest
+          registry.digitalocean.com/gafalag/gafalag-api:sha-${{ github.sha }}
       
   deploy:
     needs: build
@@ -59,7 +59,7 @@ jobs:
           # REPLACE "cr-bp-web-backend" with your own container registry
           script: |
             doctl registry login --expiry-seconds 180
-            docker pull registry.digitalocean.com/gafalag/default-ams3:latest
+            docker pull registry.digitalocean.com/gafalag/gafalag-api:latest
             echo "calling shutdown endpoint..."
             curl --silent http://localhost/shutdown || true
             echo "giving healthcheck time to fail..."
@@ -68,11 +68,11 @@ jobs:
             echo "removing unused images..."
             docker image prune -a
             echo "stopping and removing running container..."
-            docker stop default-ams3 || true
-            docker rm default-ams3 || true
+            docker stop gafalag-api || true
+            docker rm gafalag-api || true
             echo "starting server instance..."
             docker run -d \
               --restart always \
               -p 0.0.0.0:80:8080 \
-              --name default-ams3 \
-              registry.digitalocean.com/gafalag/default-ams3:latest
+              --name gafalag-api \
+              registry.digitalocean.com/gafalag/gafalag-api:latest
