--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Install doctl for DigitalOcean
       uses: digitalocean/action-doctl@v1
       with:
-        args: token
-        token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+        entryPoint: registry.digitalocean.com/gafalag
+        arg: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
         
     - name: Set up Docker Builder
       uses: docker/setup-buildx-action@v1
