--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,8 @@ jobs:
       uses: digitalocean/action-doctl@v1
       with:
 #         entryPoint: registry.digitalocean.com/gafalag
-        args: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+        DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+          
         
     - name: Set up Docker Builder
       uses: docker/setup-buildx-action@v1
