--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
         uses: actions/checkout@v2
       # Droplets already have docker, doctl + auth, and curl installed
       # "gafalag-api" - image name used in build job
-      - name: Deploy gafalag-api:latest to DigitalOcean Droplet
+      - name: Deploy gafalag-api to DigitalOcean Droplet
         uses: appleboy/ssh-action@v0.1.4
         with:
           host: ${{ secrets.DIGITALOCEAN_DROPLET_HOST }}
