added exception reason message

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.profiles.active=@profileActive@
+# server
 server.port=8080
+server.error.include-message=always
 # datasource connection
 spring.datasource.username=docker
 spring.datasource.password=docker
