--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,8 @@
 # datasource connection
-spring.datasource.url=jdbc:postgresql://localhost:5433/gafalag_db
+gafalag.db.url=jdbc:postgresql://localhost:5433/gafalag_db
+gafalag.db.username=docker
+gafalag.db.password=docker
+
 # console out
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
