added support for multiple db connection, need it for v2 migration now and probably for auth later

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,11 @@
 # datasource connection
-gafalag.db.url=jdbc:postgresql://localhost:5433/gafalag_db
-gafalag.db.username=docker
-gafalag.db.password=docker
+gafalag.db.v1.url=jdbc:postgresql://localhost:5433/gafalag_db
+gafalag.db.v1.username=docker
+gafalag.db.v1.password=docker
+
+gafalag.db.v2.url=jdbc:postgresql://localhost:5433/gafalag_db_v2
+gafalag.db.v2.username=docker
+gafalag.db.v2.password=docker
 
 # console out
 spring.jpa.show-sql=true
