[WIP] Implemented mapping postgres enum types. Added EnumTypePostgreSql.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,5 +8,6 @@ gafalag.db.v2.username=docker
 gafalag.db.v2.password=docker
 
 # console out
+logging.level.sql=debug
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
